unpackaged/main/default/objects/User/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <formula>DATEVALUE(     Contact.CreatedDate    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created On</label>
    <type>Date</type>
</CustomField>