unpackaged/main/default/objects/User/fields/Department_Region__c.field-meta.xml
<CustomField>
    <fullName>Department_Region__c</fullName>
    <description>Department or region most relevant to user</description>
    <inlineHelpText>Department or region most relevant to user</inlineHelpText>
    <label>Department/Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>SANT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>NZN</fullName>
            </value>
            <value>
                <fullName>NZS</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>SEAP</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>MAL</fullName>
            </value>
            <value>
                <fullName>UKN</fullName>
            </value>
            <value>
                <fullName>UKS</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Financial and Managed Services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fin</fullName>
            </value>
            <value>
                <fullName>HRP</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>P&amp;R</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>