unpackaged/main/default/objects/User/fields/Email_Custom__c.field-meta.xml
<CustomField>
    <fullName>Email_Custom__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Custom</label>
    <type>Text</type>
</CustomField>