unpackaged/main/default/objects/User/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <description>T1 CRM UserName</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>