unpackaged/main/default/objects/User/fields/Forecast_Label__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Label__c</fullName>
    <label>Forecast_Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>