unpackaged/main/default/objects/User/fields/IE_Compatibility_for_Community__c.field-meta.xml
<CustomField>
    <fullName>IE_Compatibility_for_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IE Compatibility for Community</label>
    <type>Checkbox</type>
</CustomField>