unpackaged/main/default/objects/User/fields/Licence_Discount_Approver__c.field-meta.xml
<CustomField>
    <fullName>Licence_Discount_Approver__c</fullName>
    <label>Licence Discount Approver</label>
    <relationshipName>Licence_Discount_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>