unpackaged/main/default/objects/User/fields/Org_Support_Key_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Org_Support_Key_Supplied__c</fullName>
    <inlineHelpText>The value provided by the user when they self-registered for Customer Community access.</inlineHelpText>
    <label>Org Support Key Supplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>