unpackaged/main/default/objects/User/fields/Reporting_Tags__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Tags__c</fullName>
    <description>Used to categorise a user for reporting purposes. EG ability to have users tagged as HRP.</description>
    <inlineHelpText>Used to categorise a user for reporting purposes. EG ability to have users tagged as HRP.  Please keep tags meaningful but short as all tags need to fit within a 255 character field. There is no limit to the number of tags.</inlineHelpText>
    <label>Reporting Tags</label>
    <type>TextArea</type>
</CustomField>