unpackaged/main/default/objects/User/fields/See_All_Forecasts__c.field-meta.xml
<CustomField>
    <fullName>See_All_Forecasts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows user to see forecasts for all users. Object, VF page and Apex Class access may need to be given separately via Permission Sets.</description>
    <label>See All Forecasts</label>
    <type>Checkbox</type>
</CustomField>