unpackaged/main/default/objects/User/fields/Terms_of_Use_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Use_Accepted__c</fullName>
    <description>The date and time the user accepted the Terms of Use for the Customer Community</description>
    <label>Terms of Use Accepted</label>
    <type>DateTime</type>
</CustomField>