unpackaged/main/default/objects/User/fields/Username_Custom__c.field-meta.xml
<CustomField>
    <fullName>Username_Custom__c</fullName>
    <formula>Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username Custom</label>
    <type>Text</type>
</CustomField>