unpackaged/main/default/objects/User/validationRules/LockUserNameforCommunityUsers.validationRule-meta.xml
<ValidationRule>
    <fullName>LockUserNameforCommunityUsers</fullName>
    <active>true</active>
    <description>Stops users changing their username.</description>
    <errorConditionFormula>ISCHANGED( Username ) &amp;&amp;
CONTAINS($Profile.Name, &quot;Community&quot;)</errorConditionFormula>
    <errorDisplayField>Username</errorDisplayField>
    <errorMessage>You must not change User Name</errorMessage>
</ValidationRule>