unpackaged/main/default/objects/User/validationRules/Phone_No_Format_Aus.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_No_Format_Aus</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Phone) || ISNEW() = true) &amp;&amp;
(TEXT( Contact.Account.CountryArea__c) =&#39;Australia&#39;) &amp;&amp; 
(NOT (REGEX(Phone , &quot;[+61]{3} [1-9]{1} [0-9]{4} [0-9]{4}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1} [0-9]{8}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[1-9]{9}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{8}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{5}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{3} [0-9]{3} [0-9]{3}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{2} [0-9]{3} [0-9]{3}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{1} [0-9]{2} [0-9]{2}&quot;) || 
REGEX(Phone , &quot;[+61]{3} [1-9]{1}[0-9]{2} [0-9]{3}&quot;)
) || 
(LEFT(Phone,3) &lt;&gt; &quot;+61&quot;) ) &amp;&amp; 
NOT ISBLANK(Phone) &amp;&amp; 
NOT ($Profile.Name  = &quot;System Administrator&quot; || BEGINS($Profile.Name, &quot;T1 Customer Community&quot;)) &amp;&amp;
NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>International format required. AU numbers must have prefix +61. Area Code to exclude leading 0. Examples: +61 7 3167 7300 or +61 1300 784 388 or +61 13 12 12 or +61 439 545 333</errorMessage>
</ValidationRule>