unpackaged/main/default/objects/User/validationRules/Phone_No_Format_NZ.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_No_Format_NZ</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Phone) || ISNEW() = true) &amp;&amp;
(TEXT(  Contact.Account.CountryArea__c ) =&#39;New Zealand&#39;) &amp;&amp; 
(NOT (REGEX(Phone , &quot;[+64]{3} [1-9]{1} [0-9]{3} [0-9]{4}&quot;) || 
REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{1} [0-9]{3} [0-9]{4}&quot;) || 
REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{1} [0-9]{6}&quot;) || REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{1} [0-9]{8}&quot;) || REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{2} [0-9]{5}&quot;) || 
REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{2} [0-9]{3} [0-9]{3}&quot;) || 
REGEX(Phone , &quot;[+64]{3} [1-9]{1}[0-9]{2} [0-9]{3} [0-9]{4}&quot;) 
) || 
(LEFT(Phone,3) &lt;&gt; &quot;+64&quot;) ) &amp;&amp; 
NOT ISBLANK(Phone) &amp;&amp;  
NOT ($Profile.Name = &quot;System Administrator&quot; || BEGINS($Profile.Name, &quot;T1 Customer Community&quot;)) &amp;&amp; 
NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>International format required. NZ numbers must have prefix +64. Area Code to exclude leading 0. Examples: +64 4 913 8300, +64 800 123 456, +64 21 345 6879</errorMessage>
</ValidationRule>