unpackaged/main/default/objects/User/listViews/All_Internal.listView-meta.xml
<ListView>
    <fullName>All_Internal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.IS_PARTNER</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>All Internal</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>