unpackaged/main/default/objects/User/listViews/Business_Analysts.listView-meta.xml
<ListView>
    <fullName>Business_Analysts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.TITLE</field>
        <operation>equals</operation>
        <value>Business Analyst</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Customer Support Community,Employee Support Community,Customer Community User</value>
    </filters>
    <label>Business Analysts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>