unpackaged/main/default/objects/User/listViews/Customer_Chatter_Community_Users.listView-meta.xml
<ListView>
    <fullName>Customer_Chatter_Community_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Chatter Community</value>
    </filters>
    <label>Customer Chatter Community Users</label>
    <sharedTo>
        <roleAndSubordinatesInternal>System_Administrator</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>