unpackaged/main/default/objects/User/listViews/Licence_Info.listView-meta.xml
<ListView>
    <fullName>Licence_Info</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.USERS.IS_PARTNER</columns>
    <columns>SALES.CONTACT.NAME</columns>
    <columns>KNOWLEDGE_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Licence Info</label>
    <sharedTo>
        <role>Support_Consultant</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>