unpackaged/main/default/objects/User/listViews/User_by_Name.listView-meta.xml
<ListView>
    <fullName>User_by_Name</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>buckley</value>
    </filters>
    <label>User by Name</label>
    <sharedTo>
        <group>System_Adminstrators</group>
    </sharedTo>
</ListView>