unpackaged/main/default/objects/User/listViews/Users_with_Managers_Approvers.listView-meta.xml
<ListView>
    <fullName>Users_with_Managers_Approvers</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Licence_Discount_Approver__c</columns>
    <columns>DELEGATED_APPROVER</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MANAGER</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Licence_Discount_Approver__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Users with Managers/Approvers</label>
</ListView>